added ref Lee2020

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4287,6 +4287,19 @@
   timestamp = {2010.10.04},
 }
 
+@Article{Callaway2002,
+  author    = {Callaway, C. B. and Lester, J. C.},
+  title     = {Narrative prose generation},
+  journal   = {Artificial Intelligence},
+  year      = {2002},
+  volume    = {139},
+  number    = {2},
+  pages     = {213-252},
+  doi       = {10.1016/s0004-3702(02)00230-8},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
 @Article{CamachoCollados2018,
   author    = {Camacho-Collados, J. and Pilehvar, M. T.},
   title     = {From Word To Sense Embeddings: A Survey on Vector Representations of Meaning},
@@ -6226,6 +6239,19 @@
   url       = {https://books.google.fr/books/about/Marvel.html?id=uuAOAAAAIAAJ&redir_esc=y},
 }
 
+@InProceedings{Danil2018,
+  author    = {Bliznuk, D. and Yagunova, E. and Pronoza, E.},
+  title     = {Similarity Measures and Models for Movie Series Recommender System},
+  booktitle = {International Conference on Internet Science},
+  year      = {2018},
+  volume    = {11193},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {181-193},
+  doi       = {10.1007/978-3-030-01437-7_15},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
 @InProceedings{Danisman2008,
   author    = {Danisman, T. and Alpkocak1, A.},
   title     = {Feeler: Emotion Classification of Text Using Vector Space Model},
@@ -6760,6 +6786,17 @@
   doi       = {10.1016/j.paid.2015.06.011},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InProceedings{Djuric2015,
+  author    = {Djuric, N. and Wu, H. and Radosavljevic, V. and Grbovic, M. and Bhamidipati, N.},
+  title     = {Hierarchical Neural Language Models for Joint Representation of Streaming Documents and their Content},
+  booktitle = {24th International Conference on World Wide Web},
+  year      = {2015},
+  pages     = {248-255},
+  doi       = {10.1145/2736277.2741643},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
 }
 
 @Article{Do2018,
@@ -9168,6 +9205,17 @@
   url       = {https://press.princeton.edu/titles/10537.html},
 }
 
+@InProceedings{Ganesh2016,
+  author    = {Ganesh, J. and Gupta, M. and Varma, V.},
+  title     = {Doc2Sent2Vec: A Novel Two-Phase Approach for Learning Document Representation},
+  booktitle = {39th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  year      = {2016},
+  pages     = {809-812},
+  doi       = {10.1145/2911451.2914717},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
 @Article{Gansner2000,
   author    = {Gansner, E. R. and North, S. C.},
   title     = {An open graph visualization system and its applications to software engineering},
@@ -9248,6 +9296,17 @@
   doi       = {10.1145/1459359.1459462},
   owner     = {Vincent},
   timestamp = {2018.04.27},
+}
+
+@InProceedings{Garten2015,
+  author    = {Garten, J. and Sagae, K. and Ustun, V. and Dehghani, M.},
+  title     = {Combining Distributed Vector Representations for Words},
+  booktitle = {1st Workshop on Vector Space Modeling for Natural Language Processing},
+  year      = {2015},
+  pages     = {95-101},
+  doi       = {10.3115/v1/w15-1513},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
 }
 
 @Article{Gasca2000,
@@ -9372,6 +9431,32 @@
   owner     = {Vincent},
   timestamp = {2019.03.27},
   url       = {http://gaia.fdi.ucm.es/sites/seed13/assets/actas_seed.pdf#page=35},
+}
+
+@Article{Gervs2014,
+  author    = {Gervás, P.},
+  title     = {Composing narrative discourse for stories of many characters: A case study over a chess game},
+  journal   = {Literary and Linguistic Computing},
+  year      = {2014},
+  volume    = {29},
+  number    = {4},
+  pages     = {511-531},
+  doi       = {10.1093/llc/fqu040},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
+@Article{Gervs2015,
+  author    = {Gervás, P.},
+  title     = {Computational Drafting of Plot Structures for Russian Folk Tales},
+  journal   = {Cognitive Computation},
+  year      = {2015},
+  volume    = {8},
+  number    = {2},
+  pages     = {187-203},
+  doi       = {10.1007/s12559-015-9338-8},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
 }
 
 @Article{Ghalmane2018a,
@@ -9741,6 +9826,20 @@
   timestamp = {2019.04.01},
 }
 
+@InCollection{Gomes2013,
+  author    = {Gomes, P. and Paiva, A. and Martinho, C. and Jhala, A.},
+  title     = {Metrics for Character Believability in Interactive Narrative},
+  booktitle = {International Conference on Interactive Digital Storytelling},
+  publisher = {Springer},
+  year      = {2013},
+  volume    = {8230},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {223-228},
+  doi       = {10.1007/978-3-319-02756-2_27},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
 @Article{GomezUribe2015,
   author    = {Gomez-Uribe, C. A. and Hunt, N.},
   title     = {The Netflix Recommender System},
@@ -9843,7 +9942,30 @@
   url       = {https://dl.acm.org/citation.cfm?id=1870658.1870666},
 }
 
-@Article{Goyal2018,
+@InProceedings{Goyal2018,
+  author    = {Goyal, P. and Hosseinmardi, H. and Ferrara, E. and Galstyan, A.},
+  title     = {Embedding Networks with Edge Attributes},
+  booktitle = {29th ACM Conference on Hypertext and Social Media},
+  year      = {2018},
+  pages     = {38-42},
+  doi       = {10.1145/3209542.3209571},
+  owner     = {Vincent},
+  timestamp = {2018.07.10},
+}
+
+@Article{Goyal2018b,
+  author    = {Goyal, P. and Ferrara, E.},
+  title     = {Graph embedding techniques, applications, and performance: A survey},
+  journal   = {Knowledge-Based Systems},
+  year      = {2018},
+  volume    = {151},
+  pages     = {78-94},
+  doi       = {10.1016/j.knosys.2018.03.022},
+  owner     = {Vincent},
+  timestamp = {2020.01.26},
+}
+
+@Article{Goyal2018c,
   author    = {Goyal, A. and Gupta, V. and Kumar, M.},
   title     = {Recent Named Entity Recognition and Classification techniques: A systematic review},
   journal   = {Computer Science Review},
@@ -9988,6 +10110,19 @@
   doi       = {10.1145/2908131.2908196},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@InProceedings{Grayson2016b,
+  author    = {Grayson, S. and Mulvany, M. and Wade, K. and Meaney, G. and Greene, D.},
+  title     = {Novel2vec: characterising 19th century fiction via word embeddings},
+  booktitle = {24th Irish Conference on Artificial Intelligence and Cognitive Science},
+  year      = {2016},
+  volume    = {1751},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {68-79},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+  url       = {http://ceur-ws.org/Vol-1751/AICS_2016_paper_48.pdf},
 }
 
 @Book{Green1992,
@@ -11610,6 +11745,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@InProceedings{Hu2016,
+  author    = {Hu, S.-H. and Li, Y. and Li, B.},
+  title     = {Video2vec: Learning semantic spatio-temporal embeddings for video representation},
+  booktitle = {23rd International Conference on Pattern Recognition},
+  year      = {2016},
+  doi       = {10.1109/icpr.2016.7899735},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
 @Article{Hu2017,
   author    = {Hu, G.-M. and Mai, T.-L. and Chen, C.-M.},
   title     = {Visualizing the {GPCR} Network: Classification and Evolution},
@@ -12696,6 +12841,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tpami.2002.1017616},
   owner     = {Vincent},
   timestamp = {2020.01.02},
+}
+
+@InProceedings{Kapadia2015,
+  author    = {Kapadia, M. and Falk, J. and Zünd, F. and Marti, M. and Sumner, R. W. and Gross, M.},
+  title     = {Computer-assisted authoring of interactive narratives},
+  booktitle = {19th Symposium on Interactive 3D Graphics and Games},
+  year      = {2015},
+  pages     = {85-92},
+  doi       = {10.1145/2699276.2699279},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
+@InProceedings{Kapadia2017,
+  author    = {Kapadia, M. and Poulakos, S. and Gross, M. and Sumner, R. W.},
+  title     = {Computational narrative},
+  booktitle = {ACM SIGGRAPH Courses},
+  year      = {2017},
+  pages     = {4},
+  doi       = {10.1145/3084873.3084931},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
 }
 
 @InProceedings{Karamanis2004,
@@ -14023,6 +14190,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@InProceedings{Lakoff2010,
+  author    = {Lakoff, G. and Narayanan, S.},
+  title     = {Toward a Computational Model of Narrative},
+  booktitle = {AAAI Fall Symposium},
+  year      = {2010},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+  url       = {https://www.aaai.org/ocs/index.php/FSS/FSS10/paper/viewPaper/2323},
+}
+
 @Article{Lambiotte2007,
   author    = {Lambiotte, R. and Ausloos, M. and Thelwall, M.},
   title     = {Word statistics in Blogs and {RSS} feeds: Towards empirical universal evidence},
@@ -14500,7 +14677,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InProceedings{Lee2016e,
   author    = {Lee, O-J. and Jung, J. J.},
-  title     = {Affective Character Network for Understanding Plots of Narrative Contents},
+  title     = {Affective Character Network for Understanding Plots of Narrative Multimedia Contents},
   booktitle = {Affective Computing and Context Awareness in Ambient Intelligence},
   year      = {2016},
   owner     = {Vincent},
@@ -14985,6 +15162,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.cc.gatech.edu/~riedl/pubs/cmn12.pdf},
+}
+
+@InProceedings{Li2013,
+  author    = {Li, B. A. and Lee-Urban, S. M. Johnston, G. and Riedl, M. O.},
+  title     = {Story generation with crowdsourced plot graphs},
+  booktitle = {27th AAAI Conference on Artificial Intelligence},
+  year      = {2013},
+  pages     = {598-604},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+  url       = {https://dl.acm.org/doi/10.5555/2891460.2891543},
 }
 
 @Article{Li2014v,
@@ -15608,6 +15796,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@InProceedings{Lotker2016,
+  author    = {Lotker, Z.},
+  title     = {The tale of two clocks},
+  booktitle = {IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
+  year      = {2016},
+  pages     = {768-776},
+  doi       = {10.1109/asonam.2016.7752325},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
 @Article{LOUWERSE2006,
   author    = {Louwerse, M. and Cai, Z. and Hu, X. and Ventura, M. and Jeuniaux, P.},
   title     = {Cognitively inspired natural-language based knowledge representations: Further explorations of latent semantic analysis},
@@ -16042,6 +16241,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.01.31},
 }
 
+@Article{Maaten2008,
+  author    = {van der Maaten, L. and Hinton, G.},
+  title     = {Visualizing data using t-sne},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2008},
+  volume    = {9},
+  pages     = {2579-2605},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+  url       = {http://www.jmlr.org/papers/v9/vandermaaten08a.html},
+}
+
 @InProceedings{Maaten2009,
   author    = {van der Maaten, L.},
   title     = {Learning a parametric embedding by preserving local structure},
@@ -16326,6 +16537,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.01.23},
 }
 
+@InProceedings{Mani2016,
+  author    = {Mani, I.},
+  title     = {Animation Motion in NarrativeML},
+  booktitle = {7th Workshop on Computational Models of Narrative},
+  year      = {2016},
+  volume    = {53},
+  series    = {OpenAccess Series in Informatics},
+  pages     = {3:1-3:16},
+  doi       = {10.4230/OASIcs.CMN.2016.3},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
 @Article{Manivannan2018,
   author    = {Manivannan, A. and Yow, W. Q. and Bouffanais, R. and Barrat, A.},
   title     = {Are the different layers of a social network conveying the same information?},
@@ -16540,6 +16764,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Book{Marks2006,
+  title     = {Inside Story: The Power of the Transformational Arc},
+  publisher = {Three Mountain Press},
+  year      = {2006},
+  author    = {Marks, D.},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+  url       = {https://books.google.fr/books?id=8yfbBQAAQBAJ},
+}
+
 @InProceedings{Marneffe2006,
   author    = {de Marneffe, M.-C. and MacCartney, B. and Manning, C. D.},
   title     = {Generating typed dependency parses from phrase structure parses},
@@ -16595,6 +16829,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/physreve.90.052808},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@InProceedings{Martin2018,
+  author    = {Martin, L. J. and Ammanabrolu, P. and Wang, X. and Hancock, W. and Singh, S. and Harrison, B. and Riedl, M. O.},
+  title     = {Event Representations for Automated Story Generation with Deep Neural Nets},
+  booktitle = {32nd AAAI Conference on Artificial Intelligence},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+  url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/viewPaper/17046},
 }
 
 @InProceedings{Martinez-Ortiz2015,
@@ -17022,6 +17266,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://mckeestory.com/books/story/},
 }
 
+@Book{McKee2016,
+  title     = {Dialogue: The Art of Verbal Action for Page, Stage, and Screen},
+  publisher = {Twelve},
+  year      = {2016},
+  author    = {McKee, R.},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+  url       = {https://mckeestory.com/books/dialogue/},
+}
+
 @PhdThesis{McKinnon2010,
   author    = {McKinnon, J. S.},
   title     = {The dramaturgy appropriation: how Canadian Playwrights use and abuse Shakespeare and Chekhov},
@@ -17325,6 +17579,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://dl.acm.org/citation.cfm?id=2984237},
+}
+
+@Article{Miller2019,
+  author    = {Miller, T.},
+  title     = {Explanation in artificial intelligence: Insights from the social sciences},
+  journal   = {Artificial Intelligence},
+  year      = {2019},
+  volume    = {267},
+  pages     = {1-38},
+  doi       = {10.1016/j.artint.2018.07.007},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
 }
 
 @Article{Milo2002,
@@ -18814,6 +19080,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@Article{Nguyen2018,
+  author    = {Nguyen, H. L. and Jung, J. E. and Lee, O-J. and Kim, Y.},
+  title     = {Multi-scaled Spatial Analytics on Discovering Latent Social Events for Smart Urban Services},
+  journal   = {Journal of Universal Computer Science},
+  year      = {2018},
+  volume    = {24},
+  number    = {3},
+  doi       = {10.3217/jucs-024-03-0322},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
 @InProceedings{Nguyen2019,
   author    = {Nguyen, N.-V. and Rigaud, C. and Burie, J.-C.},
   title     = {Multi-task Model for Comic Book Image Analysis},
@@ -19541,6 +19819,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@InProceedings{Pan2018,
+  author    = {Pan, S. and Hu, R. and Long, G. and Jiang, J. and Yao, L. and Zhang, C.},
+  title     = {Adversarially Regularized Graph Autoencoder for Graph Embedding},
+  booktitle = {27th International Joint Conference on Artificial Intelligence},
+  year      = {2018},
+  pages     = {2609-2615},
+  groups    = {Node Embeddings (Embeddings)},
+  owner     = {Vincent},
+  timestamp = {2020.01.27},
+  url       = {https://dl.acm.org/doi/abs/10.5555/3304889.3305023},
+}
+
 @Article{Pan2019b,
   author    = {Pan, Y. and Niu, Z. and Wu, J. and Zhang, J.},
   title     = {InSocialNet: Interactive visual analytics for role-event videos},
@@ -20046,6 +20336,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/09528130010029820},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@InProceedings{Perozzi2014a,
+  author    = {Perozzi, B. and Al-Rfou, R. and Skiena, S.},
+  title     = {DeepWalk: online learning of social representations},
+  booktitle = {20th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2014},
+  pages     = {701-710},
+  doi       = {10.1145/2623330.2623732},
+  owner     = {Vincent},
+  timestamp = {2020.01.25},
 }
 
 @Article{Perry1979,
@@ -20707,6 +21008,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-540-70904-6_19},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@InCollection{Purdy2016,
+  author    = {Purdy, C. and Riedl, M. O.},
+  title     = {Reading Between the Lines: Using Plot Graphs to Draw Inferences from Stories},
+  booktitle = {International Conference on Interactive Digital Storytelling},
+  publisher = {Springer},
+  year      = {2016},
+  volume    = {10045},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {197-208},
+  doi       = {10.1007/978-3-319-48279-8_18},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
 }
 
 @Article{Pustejovsky2005,
@@ -24625,6 +24940,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@InProceedings{Tang2015c,
+  author    = {Tang, J. and Qu, M. and Wang, M. and Zhang, M. and Yan, J. and Mei, Q.},
+  title     = {LINE: Large-scale Information Network Embedding},
+  booktitle = {24th International Conference on World Wide Web},
+  year      = {2015},
+  pages     = {1067-1077},
+  doi       = {10.1145/2736277.2741093},
+  owner     = {Vincent},
+  timestamp = {2020.01.26},
+}
+
 @Article{Tangherlini2013,
   author    = {Tangherlini, T. R.},
   title     = {The Folklore Macroscope: Challenges for a Computational Folkloristics},
@@ -24853,6 +25179,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1089/brain.2011.0038},
   owner     = {Vincent},
   timestamp = {2014.06.08},
+}
+
+@InProceedings{TheofanisChourdakis2017,
+  author    = {Chourdakis, E. T. and Reiss, J.},
+  title     = {Constructing narrative using a generative model and continuous action policies},
+  booktitle = {Workshop on Computational Creativity in Natural Language Generation},
+  year      = {2017},
+  pages     = {38-43},
+  doi       = {10.18653/v1/w17-3905},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
 }
 
 @InProceedings{Thet2009,
@@ -27340,6 +27677,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.ams.giti.waseda.ac.jp/data/pdf-files/2014IEVC_yanagisawa.pdf},
 }
 
+@InProceedings{Yanardag2015,
+  author    = {Yanardag, P. and Vishwanathan, S. V. N.},
+  title     = {Deep Graph Kernels},
+  booktitle = {21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2015},
+  pages     = {1365-1374},
+  doi       = {10.1145/2783258.2783417},
+  owner     = {Vincent},
+  timestamp = {2020.02.24},
+}
+
 @Book{Yang1994,
   title     = {Gifts, Favours and Banquets. The art of social relationships in China},
   publisher = {Cornell University Press},
@@ -27638,6 +27986,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@InProceedings{Yi2016,
+  author    = {Yi, M.-Y. and Lee, O-J. and Jung, J. J.},
+  title     = {{MBTI}-Based Collaborative Recommendation System: A Case Study of Webtoon Contents},
+  booktitle = {International Conference on Context-Aware Systems and Applications},
+  year      = {2016},
+  series    = {Lecture Notes of the Institute for Computer Sciences, Social Informatics and Telecommunications Engineering},
+  pages     = {101-110},
+  doi       = {10.1007/978-3-319-29236-6_11},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
+}
+
 @InProceedings{Yin2011,
   author    = {Yin, Q. and Tang, X. and Sun, J.},
   title     = {An associate-predict model for face recognition},
@@ -27720,6 +28080,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/CVPR.2009.5206526},
   owner     = {Vincent},
   timestamp = {2018.03.19},
+}
+
+@InProceedings{Yu2016,
+  author    = {Yu, P. and Lin, L.},
+  title     = {{SeBPR}: Semantics Enhanced Bayesian Personalized Ranking with Comparable Item Pairs},
+  booktitle = {16th IEEE International Conference on Data Mining Workshops},
+  year      = {2016},
+  doi       = {10.1109/icdmw.2016.0147},
+  owner     = {Vincent},
+  timestamp = {2020.03.16},
 }
 
 @InProceedings{Yuan2005,
