added ref Lotker2016

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -652,6 +652,19 @@
   timestamp = {2010.06.03},
 }
 
+@Article{Albert2000,
+  author    = {Albert, R. and Barabási, A. L.},
+  title     = {Topology of evolving networks: Local events and universality},
+  journal   = {Physical Review Letters},
+  year      = {2000},
+  volume    = {85},
+  number    = {24},
+  pages     = {5234-5237},
+  doi       = {10.1103/PhysRevLett.85.5234},
+  owner     = {Vincent},
+  timestamp = {2010.09.03},
+}
+
 @Article{Albert2000b,
   author    = {Albert, R. and Jeong, H. and Barabási, A.-L.},
   title     = {Error and attack tolerance of complex networks},
@@ -1285,6 +1298,19 @@
   url       = {http://eprints.glos.ac.uk/3787/},
 }
 
+@InProceedings{Aronov2004,
+  author    = {Aronov, B. and Asano, T. and Katoh, N. and Mehlhorn, K. and Tokuyama, T.},
+  title     = {Polyline Fitting of Planar Points Under Min-sum Criteria},
+  booktitle = {International Symposium on Algorithms and Computation},
+  year      = {2004},
+  volume    = {3341},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {77-88},
+  doi       = {10.1007/978-3-540-30551-4_9},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+}
+
 @InCollection{Assmann2008,
   author    = {Assmann, J.},
   title     = {Communicative and cultural memory},
@@ -1376,6 +1402,19 @@
   doi       = {10.1111/j.1467-9280.2008.02148.x},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InProceedings{Avin2008,
+  author    = {Avin, C. and Koucký, M. and Lotker, Z.},
+  title     = {How to Explore a Fast-Changing World (Cover Time of a Simple Random Walk on Evolving Graphs)},
+  booktitle = {International Colloquium on Automata, Languages, and Programming},
+  year      = {2008},
+  volume    = {5125},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {121-132},
+  doi       = {10.1007/978-3-540-70575-8_11},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
 }
 
 @Article{Avril2014,
@@ -2848,6 +2887,19 @@
   timestamp = {2019.03.28},
 }
 
+@Article{Block2014,
+  author    = {Block, R. A. and Grondin, S.},
+  title     = {Timing and time perception: A selective review and commentary on recent reviews},
+  journal   = {Frontiers in Psychology},
+  year      = {2014},
+  volume    = {5},
+  pages     = {648},
+  doi       = {10.3389/fpsyg.2014.00648},
+  owner     = {Vincent},
+  publisher = {Frontiers Media {SA}},
+  timestamp = {2020.03.17},
+}
+
 @Article{Blondel2008,
   author    = {Blondel, V. D. and Guillaume, J.-L. and Lambiotte, R. and Lefebvre, E.},
   title     = {Fast unfolding of communities in large networks},
@@ -3468,6 +3520,19 @@
   doi       = {10.1109/icsc.2011.48},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@InCollection{Braha2009,
+  author    = {Braha, D. and Bar-Yam, Y.},
+  title     = {Time-Dependent Complex Networks: Dynamic Centrality, Dynamic Motifs, and Cycles of Social Interactions},
+  booktitle = {Adaptive Networks: Theory, Models and Applications},
+  publisher = {Springer},
+  year      = {2009},
+  series    = {Understanding Complex Systems},
+  pages     = {39-50},
+  doi       = {10.1007/978-3-642-01284-6_3},
+  owner     = {Vincent},
+  timestamp = {2017.03.14},
 }
 
 @InProceedings{Bramsen2011,
@@ -4416,6 +4481,16 @@
   doi       = {10.1145/1081870.1081934},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Book{Carey2002,
+  title     = {CliffsNotes on Shakespeare's Othello},
+  publisher = {Houghton Mifflin Harcourt},
+  year      = {2002},
+  author    = {Carey, G. K. and McCulloch, H.},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+  url       = {https://books.google.fr/books?id=Ot6v3YRgTm0C},
 }
 
 @InProceedings{Carley2003,
@@ -5523,6 +5598,17 @@
   timestamp = {2018.07.10},
 }
 
+@InProceedings{Clementi2008,
+  author    = {Clementi, A. E. F. and Macci, C. and Monti, A. and Pasquale, F. and Silvestri, R.},
+  title     = {Flooding time in edge-Markovian dynamic graphs},
+  booktitle = {27th ACM Symposium on Principles of distributed computing},
+  year      = {2008},
+  pages     = {213-222},
+  doi       = {10.1145/1400751.1400781},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+}
+
 @Article{Clough2016,
   author    = {Clough, J. R. and Evans, T. S.},
   title     = {What is the dimension of citation space?},
@@ -5696,6 +5782,16 @@
   owner     = {Vincent},
   timestamp = {2019.08.21},
   url       = {https://broadviewpress.com/product/the-broadview-anthology-of-restoration-and-early-eighteenth-century-drama/?ph=95bf68a5569261c0022b0608},
+}
+
+@Book{Connolly2000,
+  title     = {CliffsNotes on Shakespeare's Romeo and Juliet},
+  publisher = {Houghton Mifflin Harcourt},
+  year      = {2000},
+  author    = {Connolly, A. F.},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+  url       = {https://books.google.fr/books?id=Ey6EXi77cAYC},
 }
 
 @Article{Conover1972,
@@ -6955,6 +7051,18 @@
   doi       = {10.1145/1321440.1321473},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@InCollection{Doreian1997a,
+  author    = {Doreian, P. and Stokman, F. N.},
+  title     = {The Dynamics and Evolution of Social Networks},
+  booktitle = {Evolution of Social Networks},
+  publisher = {Routledge},
+  year      = {1997},
+  chapter   = {1},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+  url       = {https://www.taylorfrancis.com/books/e/9780203059500/chapters/10.4324/9780203059500-5},
 }
 
 @Article{Doreian2017,
@@ -14213,6 +14321,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Article{Lamport1978,
+  author    = {Lamport, L.},
+  title     = {Time, clocks, and the ordering of events in a distributed system},
+  journal   = {Communications of the ACM},
+  year      = {1978},
+  volume    = {21},
+  number    = {7},
+  pages     = {558-565},
+  doi       = {10.1145/359545.359563},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+}
+
 @Book{Lancaster1979,
   title     = {The Korean Buddhist Canon: A Descriptive Catalogue},
   publisher = {Berkeley University Press},
@@ -15685,6 +15806,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.03},
 }
 
+@InProceedings{Liu2012k,
+  author    = {Liu, Wei and Kan, Andrey and Chan, Jeffrey and Bailey, James and Leckie, Christopher and Pei, Jian and Kotagiri, Ramamohanarao},
+  title     = {On compressing weighted time-evolving graphs},
+  booktitle = {21st ACM International Conference on Information and Knowledge Management},
+  year      = {2012},
+  pages     = {2319-2322},
+  doi       = {10.1145/2396761.2398630},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+}
+
 @Article{Liu2013,
   author    = {Liu, S. and Wu, Y. and Wei, E. and Liu, M. and Liu, Y.},
   title     = {StoryFlow: Tracking the Evolution of Stories},
@@ -15794,6 +15926,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s11634-010-0076-1},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@InProceedings{Lotker2015,
+  author    = {Lotker, Z.},
+  title     = {Voting algorithm in the play Julius Caesar},
+  booktitle = {2015 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
+  year      = {2015},
+  pages     = {848-855},
+  doi       = {10.1145/2808797.2810064},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
 }
 
 @InProceedings{Lotker2016,
@@ -16383,6 +16526,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-642-20161-5_93},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+}
+
+@InProceedings{Magnien2015,
+  author    = {Magnien, C. and Tarissan, F.},
+  title     = {Time Evolution of the Importance of Nodes in Dynamic Networks},
+  booktitle = {IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
+  year      = {2015},
+  pages     = {1200-1207},
+  doi       = {10.1145/2808797.2809322},
+  owner     = {Vincent},
+  timestamp = {2017.03.14},
 }
 
 @Article{Mahlberg2012,
@@ -17343,6 +17497,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://www.jstor.org/stable/20522424},
+}
+
+@Book{Mehrabian1972,
+  title     = {Nonverbal communication},
+  publisher = {Transaction Publishers},
+  year      = {1972},
+  author    = {Mehrabian, A.},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+  url       = {https://books.google.fr/books?id=s2UzmgEACAAJ},
 }
 
 @Article{Mehri2017,
@@ -19127,6 +19291,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.vanhamel.nl/codecs/Nic_Ghiollamhaith_1981a},
 }
 
+@InCollection{Nicosia2013,
+  author    = {Nicosia, V. and Tang, J. and Mascolo, C. and Musolesi, M. and Russo, G. and Latora, V.},
+  title     = {Graph Metrics for Temporal Networks},
+  booktitle = {Temporal Networks},
+  publisher = {Springer},
+  year      = {2013},
+  series    = {Understanding Complex Systems},
+  chapter   = {2},
+  pages     = {15-40},
+  doi       = {10.1007/978-3-642-36461-7_2},
+  owner     = {Vincent},
+  timestamp = {2013.05.28},
+}
+
 @InProceedings{Nielsen2011,
   author    = {Nielsen, F. A.},
   title     = {A new ANEW: Evaluation of a word list for sentiment analysis in microblogs},
@@ -20360,6 +20538,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/1772040},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Book{Perry2000,
+  title     = {CliffsNotes on Shakespeare's Julius Caesar},
+  publisher = {Houghton Mifflin Harcourt},
+  year      = {2000},
+  author    = {Perry, M. and Vickers, J. E.},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+  url       = {https://www.hmhbooks.com/shop/books/CliffsNotes-on-Shakespeares-Julius-Caesar/9780764585951},
 }
 
 @Article{Perry-Smith2003,
@@ -24720,6 +24908,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.07.03},
 }
 
+@Article{Sundararaman2005,
+  author    = {Sundararaman, B. and Buy, U. and Kshemkalyani, A. D.},
+  title     = {Clock synchronization for wireless sensor networks: a survey},
+  journal   = {Ad Hoc Networks},
+  year      = {2005},
+  volume    = {3},
+  number    = {3},
+  pages     = {281-323},
+  doi       = {10.1016/j.adhoc.2005.01.002},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+}
+
 @InProceedings{Suppa2015,
   author    = {Suppa, P. and Zimeo, E.},
   title     = {A Clustered Approach for Fast Computation of Betweenness Centrality in Social Networks},
@@ -27447,6 +27648,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1873951.1874110},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@Article{Wu2011,
+  author    = {Wu, Y.-C. and Chaudhari, Q. and Serpedin, E.},
+  title     = {Clock Synchronization of Wireless Sensor Networks},
+  journal   = {IEEE Signal Processing Magazine},
+  year      = {2011},
+  volume    = {28},
+  number    = {1},
+  pages     = {124-138},
+  doi       = {10.1109/msp.2010.938757},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
 }
 
 @InProceedings{Wu2014l,
