added ref Lotker2015

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -18885,6 +18885,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {https://pdfs.semanticscholar.org/c099/a6dc8b9f731bbc9a29a920233257c13d9b00.pdf},
 }
 
+@Article{Nettle2005,
+  author    = {Nettle, D.},
+  title     = {The Wheel of Fire and the Mating Game: Explaining the Origins of Tragedy and Comedy},
+  journal   = {Journal of Cultural and Evolutionary Psychology},
+  year      = {2005},
+  volume    = {3},
+  number    = {1},
+  pages     = {39-56},
+  doi       = {10.1556/jcep.3.2005.1.3},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
+}
+
 @Article{Newman1999a,
   author    = {Newman, M. E. J. and Watts, D. J.},
   title     = {Renormalization group analysis of the small-world network model},
@@ -19490,6 +19503,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.06.25},
   url       = {https://escholarship.org/uc/item/8508h946},
+}
+
+@Book{Norris1997,
+  title     = {Markov Chains},
+  publisher = {Cambridge University Press},
+  year      = {1997},
+  author    = {Norris, J. R.},
+  doi       = {10.1017/cbo9780511810633},
+  owner     = {Vincent},
+  timestamp = {2020.03.17},
 }
 
 @Article{Northup2006,
